--- a/Calcolatrice.html
+++ b/Calcolatrice.html
@@ -4,7 +4,7 @@
 	</head>
 	<body>
 		<script>
-			var valore;
+			var valore=1;
 			var risultato;
 			var operatore, valoreOperatore;
 			function funzioneBottone(input){
