--- a/Calcolatrice.html
+++ b/Calcolatrice.html
@@ -4,8 +4,8 @@
 	</head>
 	<body>
 		<script>
-			var valore=1;
-			var risultato;
+			var valore=12;
+			var risultato=14;
 			var operatore, valoreOperatore;
 			function funzioneBottone(input){
 				if ((input!='+')&&(input!='-')&&(input!='*')&&(input!='/')){
